--- a/block-countries.conf
+++ b/block-countries.conf
@@ -1,5 +1,5 @@
 # block these ports for the countries specified in function blockP
-PORTS='22 20 21'
+PORTS='22 20 21 80 443'
 
 # block any country that returns true
 blockP () {
